--- a/README
+++ b/README
@@ -1,9 +1,6 @@
 
-WIP 
-
-Initial work to get it going on Centos.
+Works on CentOS now 
 Refactored  to use modules
-
 And use packages rather than untarring the files.
 
 Packages can be build using SPECS from 
@@ -11,7 +8,3 @@ https://github.com/dcarley/graphite-rpms/
 
 Which I have build and placed on repo.inuits.eu 
 
-
-
-Current state is possibly broken  as I`m in the mid of changing from the tars that live in /opt to the rpms that live in 
-correct FHS locations 
